Added 'remember-me' support for tests